--- a/docker-image/.gitlab-ci.yml
+++ b/docker-image/.gitlab-ci.yml
@@ -1,12 +1,11 @@
-docker-build:
-  image: docker:latest
+build:
+  image: docker:20.10.16
   stage: build
   services:
-    - docker:dind
+    - docker:20.10.16-dind
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_PIPELINE_IID
-  before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
