--- a/deployment-kustomize/base/guestbook-service.yaml
+++ b/deployment-kustomize/base/guestbook-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: guestbook
+  namespace: default
   labels:
     app.kubernetes.io/name: guestbook
     app.kubernetes.io/component: frontend
