--- a/deployment-kustomize/base/redis-service.yaml
+++ b/deployment-kustomize/base/redis-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  namespace: default
   labels:
     app.kubernetes.io/name: redis
     app.kubernetes.io/component: backend
