--- a/deployment-manifest/guestbook-ingress.yaml
+++ b/deployment-manifest/guestbook-ingress.yaml
@@ -4,16 +4,15 @@ kind: Ingress
 metadata:
   name: guestbook
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "public"
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: guestbook
-            port:
-              number: 3000
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: guestbook
+                port:
+                  number: 3000
