--- a/deployment-kustomize/overlays/development/kustomization.yaml
+++ b/deployment-kustomize/overlays/development/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 bases:
   - ../../base
 images:
-- name: gitlab-registry.<ENV-GITLAB-DOMAIN>/git-user-<ENV-USER-ID>/guestbook-application
+- name: registry.gitlab.<ENV-ANIMAL>.commandemy.training/git-user-<ENV-USER-ID>/guestbook-application
   newTag: "1" # {"$imagepolicy": "flux-system:guestbook:tag"}
 
