fix: update app
Signed-off-by: Martin Buchleitner <mabunixda@gmail.com>

--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.20.0
+FROM golang:1.23 AS builder
 
 ENV REDIS-SERVICE-NAME="redis"
 
@@ -6,13 +6,11 @@ ENV REDIS-SERVICE-NAME="redis"
 WORKDIR /app
 ADD go.* main.go ./
 RUN go mod download \
-    && CGO_ENABLED=0 GOOS=linux go build -o main .
+    && CGO_ENABLED=0 go build -o main .
 
 FROM scratch
 WORKDIR /app
-COPY --from=0 /app/main .
-COPY ./public/index.html public/index.html
-COPY ./public/script.js public/script.js
-COPY ./public/style.css public/style.css
-CMD ["/app/main"]
+COPY --from=builder /app/main .
+COPY ./public /app/public/
+ENTRYPOINT ["/app/main"]
 EXPOSE 3000
