--- a/docker-image/.gitlab-ci.yml
+++ b/docker-image/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+---
+
 build:
   image: docker:20.10.16
   stage: build
@@ -7,5 +9,5 @@ build:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_PIPELINE_IID
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $IMAGE_TAG .
+    - docker buildx build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
