--- a/deployment-helm/templates/guestbook-service.yaml
+++ b/deployment-helm/templates/guestbook-service.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}-{{ .Chart.AppVersion }}
+  name: {{ .Release.Name }}-{{ .Values.frontend.name }}-{{ .Chart.AppVersion }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Values.frontend.labels.name }}
     app.kubernetes.io/component: {{ .Values.frontend.labels.component }}
