--- a/deployment-helm/templates/redis-service.yaml
+++ b/deployment-helm/templates/redis-service.yaml
@@ -2,7 +2,8 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ .Values.backend.name }}-{{ .Chart.AppVersion }}
+  name: {{ .Release.Name }}-{{ .Values.backend.name }}-{{ .Chart.AppVersion }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Values.backend.labels.name }}
     app.kubernetes.io/component: {{ .Values.backend.labels.component }}
