--- a/deployment-kustomize/base/app/guestbook-ingress.yaml
+++ b/deployment-kustomize/base/app/guestbook-ingress.yaml
@@ -8,7 +8,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-  - http:
+  - host: <ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>
+    http:
       paths:
       - path: /
         pathType: Prefix
